# prag-portal

./: .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  README.md  flake.nix  input.css  launch.sh  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  uno.config.ts
assets/: tailwind.css
public/: tailwind.css  unocss.css
src/: BaseComponents.rs  CollectionDisplay.rs  Collections.rs  MainPage.rs  SideBar.rs  builder.rs  collection_display.rs  collection_edit.rs  collections.rs  download_progress.rs  main.rs  main_page.rs  pages.rs  scrollable.rs  side_bar.rs  svgs.rs  text_scroller.rs
src/BaseComponents/: button.rs  mod.rs  modal.rs  search_bar.rs  string_placements.rs  switch.rs  switcher.rs
src/BaseComponents/atoms/: button.rs  center.rs  mod.rs  switch.rs
src/BaseComponents/molecules/: context_menu.rs  file_input.rs  foldables.rs  mod.rs  search_bar.rs  switcher.rs
src/BaseComponents/organisms/: markdown_renderer.rs  mod.rs  modal.rs
src/builder/: component.rs
src/collection_display/: mod_renderer.rs
src/collection_display/mod_renderer/: details.rs
src/collection_edit/: personalization.rs  sidebar.rs
