[package]
name = "prag-portal"
version = "0.1.0"
authors = ["KyleUltimate <shiue.kyle@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rust_lib = { path = "./era-connect/app/rust/" }

dioxus = { features = ["desktop"], version = "0.6.0-alpha.4" }
dioxus-logger = { git = "https://github.com/DogeDark/dioxus-logger" }
tokio = { version = "1.37.0", features = ["time", "rt"] }
tailwind_fuse = { version = "0.3.1", features = ["variant"] }
anyhow = "1.0.82"
futures-util = "0.3.30"
tokio-stream = "0.1.15"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
nucleo = "0.5.0"
itertools = "0.13.0"
derive_more = "0.99.18"
fuzzy-matcher = "0.3.7"
rand = "0.8.5"
snafu = "0.8.4"
reqwest = "0.12.5"
pulldown-cmark = "0.12.1"
dioxus-radio = { git = "https://github.com/JustSimplyKyle/dioxus-radio" }
